; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_mac.c_macaddr_cmp_internal.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_mac.c_macaddr_cmp_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @macaddr_cmp_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @macaddr_cmp_internal(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @hibits(i32* %6)
  %8 = load i32*, i32** %5, align 8
  %9 = call i64 @hibits(i32* %8)
  %10 = icmp slt i64 %7, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %34

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i64 @hibits(i32* %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @hibits(i32* %15)
  %17 = icmp sgt i64 %14, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %34

19:                                               ; preds = %12
  %20 = load i32*, i32** %4, align 8
  %21 = call i64 @lobits(i32* %20)
  %22 = load i32*, i32** %5, align 8
  %23 = call i64 @lobits(i32* %22)
  %24 = icmp slt i64 %21, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  store i32 -1, i32* %3, align 4
  br label %34

26:                                               ; preds = %19
  %27 = load i32*, i32** %4, align 8
  %28 = call i64 @lobits(i32* %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @lobits(i32* %29)
  %31 = icmp sgt i64 %28, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %26
  store i32 1, i32* %3, align 4
  br label %34

33:                                               ; preds = %26
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %32, %25, %18, %11
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @hibits(i32*) #1

declare dso_local i64 @lobits(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
